Fix Docker push command syntax

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,7 +29,7 @@ jobs:
         docker build -t georget2025/docker-graphql:0.0.2 .
     - name: Push Docker Image
       run: |
-        docker push georget2025/docker-graphql:0.0.2 .        
+        docker push georget2025/docker-graphql:0.0.2        
 
         
       
